@@ -1,6 +1,6 @@
 # GnuCOBOL compiler configuration
 #
-# Copyright (C) 2001-2012, 2014-2022 Free Software Foundation, Inc.
+# Copyright (C) 2001-2012, 2014-2023 Free Software Foundation, Inc.
 # Written by Keisuke Nishida, Roger While, Simon Sobisch, Edward Hart,
 # Ron Norman
 #
@@ -71,7 +71,7 @@ complex-odo:			yes
 odoslide:			no
 
 # Allow REDEFINES to other than last equal level number
-indirect-redefines:		no
+indirect-redefines:		yes		# "restriction removed in version 12+"
 
 # Binary byte size - defines the allocated bytes according to PIC
 # Value:         signed  unsigned  bytes
