@@ -1,6 +1,6 @@
 # GnuCOBOL runtime configuration
 #
-# Copyright (C) 2015-2022 Free Software Foundation, Inc.
+# Copyright (C) 2015-2023 Free Software Foundation, Inc.
 # Written by Simon Sobisch, Ron Norman
 #
 # This file is part of the GnuCOBOL runtime.
@@ -483,7 +483,8 @@
 # Environment name:  COB_LEGACY
 #   Parameter name:  legacy
 #          Purpose:  keep behavior of former runtime versions, currently only
-#                    for setting screen attributes for non input fields
+#                    for setting screen attributes for non input fields and
+#                    disabling blinking on some systems
 #             Type:  boolean
 #          Default:  not set
 #          Example:  legacy true
