@@ -1,4 +1,9 @@
 
+2023-02-21  Simon Sobisch <simonsobisch@gnu.org>
+
+	* rm-strict.conf: enable indirect-redefines as this was added
+	  with later RM-COBOL versions
+
 2023-02-16  Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>
 
 	* gcos.words: remove alias VALUES=VALUE, to correctly parse
