@@ -1,4 +1,8 @@
 
+2023-02-19  Simon Sobisch <simonsobisch@gnu.org>
+
+	* configure.ac: minor adjustment for bdb library lookup
+
 2023-02-10  Simon Sobisch <simonsobisch@gnu.org>
 
 	* configure.ac: fixed adjusted hack for AIX 64bit OBJECT_MODE
